# fractory-game

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  TODO.md  build.sh  index.html  opencode.jsonc  run.command  run.sh  serve.command  serve.sh  test.command  test.sh
.opencode/: opencode.json
.opencode/skills/publish/: SKILL.md
.zed/: tasks.json
docs/: architecture.md
preferences/: user_prefs.md
src/: font.cpp  font.hpp  gl.hpp  main.cpp  print_state.cpp  print_state.hpp  shader.cpp  shader.hpp  test_runner.cpp  test_runner.hpp
src/game/: config.hpp  game.cpp  game.hpp  game_model.cpp  game_model.hpp  game_view.cpp  game_view.hpp  item_renderer.cpp  item_renderer.hpp
tests/: test_cancel_drag.csv  test_drag_onto_grid.csv  test_drag_onto_grid_twice.csv  test_split.csv  test_swap.csv  test_swap_behavior.csv  test_swap_integrity.csv
tools/: deploy_itch.sh  genfont.py  serve.sh  serve_build.py
